Adicionado preview de transporte selecionado

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,15 +3,14 @@
   font-size: 14px !important;
 }
 
-/* width */
 ::ng-deep ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 
 /* Track */
 ::ng-deep ::-webkit-scrollbar-track {
-  background-color: transparent;
   background: #f1f1f1;
 }
 
