--- a/src/app/itinerario/itinerario.component.scss
+++ b/src/app/itinerario/itinerario.component.scss
@@ -2,3 +2,31 @@
     height: 100vh;
     overflow: overlay;
 }
+
+#itinerary-preview {
+    width: 450px;
+    height: 30px;
+    margin: 5px;
+    position: absolute;
+    z-index: 2;
+}
+
+#itinerary-preview .preview {
+    margin: -4px;
+}
+
+#itinerary-preview .img {
+    background-size: cover;
+    margin-top: -9px;
+    margin-right: 15px;
+  }
+
+#itinerary-preview .img.img-onibus {
+    background-image: url('../../assets/img/icone2.jpg');
+    border-bottom: 5px solid blue;
+}
+  
+#itinerary-preview .img.img-lotacao {
+    background-image: url('../../assets/img/icone2.jpg');
+    border-bottom: 5px solid red;
+}
