--- a/src/app/transport/transport.component.html
+++ b/src/app/transport/transport.component.html
@@ -1,4 +1,4 @@
-<div id="body" fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-evenly center">
+<div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="space-evenly center">
   <section id="transport" fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="space-around stretch">
 
     <article class="search">
@@ -16,10 +16,10 @@
     <article class="transports">
       <div *ngIf="!applyingFilter && transports?.length">
         <div *ngFor="let transport of transports" class="transports-map">
-          <mat-card class="transport" (click)="itinerario.setItinerary(transport.id)">
+          <mat-card (click)="setItinerary(transport.id)" [class]="'transport ' + isActive(transport.id)">
             <div fxLayout="row" matTooltip={{transport.nome}}>
               <div mat-card-avatar [class]="'img ' + getImgStyle()"></div>
-              <div fxLayout="column">
+              <div fxLayout="column" class="preview">
                 <mat-card-title>{{transport.nome}}</mat-card-title>
                 <mat-card-subtitle>
                   Linha: {{transport.codigo.split('-')[0]}}
@@ -42,7 +42,7 @@
 
   <section id="map" #Map>
     <article id="itinerary">
-      <itinerario></itinerario>
+      <itinerario [transportSelected]="transportSelected"></itinerario>
     </article>
   </section>
 </div>
