--- a/src/app/transport/transport.component.scss
+++ b/src/app/transport/transport.component.scss
@@ -24,6 +24,7 @@
 }
 
 #transport .transport:hover {
+  background: #fafafa;
   cursor: pointer
 }
 
@@ -36,9 +37,18 @@
   overflow: hidden;
 }
 
+#transport .transport.active {
+  background: #ccc;
+}
+
+#transport .preview {
+  margin: -4px;
+}
+
 #transport .img {
   background-size: cover;
-  margin-right: 15px;
+    margin-top: -9px;
+    margin-right: 15px;
 }
 
 #transport .img.img-onibus {
@@ -52,7 +62,6 @@
 }
 
 #map {
-  background: #95ec21;
   width: 100%;
   height: 100vh;
 }
