--- a/src/app/transport/transport.component.html
+++ b/src/app/transport/transport.component.html
@@ -41,8 +41,8 @@
   </section>
 
   <section id="map" #Map>
-    <article id="itinerary">
+    <div id="itinerary">
       <itinerario [transportSelected]="transportSelected"></itinerario>
-    </article>
+    </div>
   </section>
 </div>
