--- a/src/app/itinerario/itinerario.component.scss
+++ b/src/app/itinerario/itinerario.component.scss
@@ -15,6 +15,11 @@
   margin: -4px;
 }
 
+#itinerary-preview:hover {
+  background: #f5f5f5;
+  cursor: pointer;
+}
+
 #itinerary-preview .img {
   background-size: cover;
   margin-top: -9px;
@@ -29,4 +34,8 @@
 #itinerary-preview .img.img-lotacao {
   background-image: url('../../assets/img/icone2.jpg');
   border-bottom: 5px solid red;
+}
+
+.mapboxgl-canvas {
+  outline: none !important;
 }
